--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,14 @@ blockquote {
   padding: 0;
 }
 
+address {
+  font-style: normal;
+}
+
+button {
+  background: transparent;
+}
+
 a {
   color: inherit;
 }
