--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,318 @@
-/* место для вашего кода */
+@import url(global.css);
+
+body {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 1.35;
+	color: #000;
+}
+
+.container {
+	max-width: 1360px;
+	padding: 0 10px;
+	margin: 0 auto;
+}
+
+.header {
+	margin-top: 92px;
+}
+
+.nav {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  align-items: center;
+}
+
+.header__nav {
+	height: 109px;
+}
+
+.header__menu {
+	height: 23px;
+	width: 388px;
+	display: flex;
+	gap: 0 32px;
+	justify-content: space-between;
+}
+
+.header__menu-list {
+	list-style-type: circle;
+}
+
+.header_menu-list_active {
+	list-style-type: none;
+}
+
+.header__logo {
+	width: 148px;
+	height: 105px;
+	justify-self: center;
+}
+
+.address {
+  width: 240px;
+  height: 97px;
+  display: grid;
+  justify-content: center;
+}
+
+.header__contacts {
+	justify-self: end;
+}
+
+.cover {
+	margin: 0 auto;
+	margin-top: 92px;
+	height: 757px;
+	max-width: 1400px;
+	background-image: url(../images/cover.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	z-index: -1;
+}
+
+.overlay {
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0, 0, 0, 0.6);
+	z-index: 0;
+}
+
+.cover__overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.container__cover {
+	text-transform: uppercase;
+	color: #fff;
+	height: 100%;
+	padding: 165px 50px 50px 50px;
+	position: relative;
+  z-index: 1;
+}
+
+.title {
+	width: 100%;
+	margin: 0 auto;
+	display: grid;
+	row-gap: 20px;
+}
+
+.title_line {
+	font-size: 100px;
+	font-weight: 700;
+	line-height: 1.15;
+	letter-spacing: 30px;
+}
+
+.title_line-center {
+	justify-self: center;
+	line-height: 1;
+	letter-spacing: 30px;
+}
+
+.title_line-right {
+	justify-self: end;
+	line-height: 1;
+}
+.title_span {
+	letter-spacing: 60px;
+}
+
+.title_span-o {
+	letter-spacing: 0;
+}
+
+.cover__bottom {
+	display: flex;
+	justify-content: end;
+	align-items: center;
+	padding-top: 135px;
+}
+.cover__text {
+	padding-right: 78px;
+	word-spacing: 21px;
+}
+
+.cover__button {
+	border: 1px solid #fff;
+	padding: 12px 32px;
+}
+
+.cover__button-text {
+	font-family: Raleway;
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	text-transform: uppercase;
+	color: #fff;
+}
+
+.lots {
+	margin-top: 180px;
+}
+
+.heading {
+	font-size: 40px;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+.heading__lots {
+	padding-left: 40px;
+	padding-bottom: 27px;
+}
+
+.lots__card-list {
+	list-style: none;
+	margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, 430px);
+	gap: 25px;
+}
+
+.lot-card {
+	padding: 50px 40px;
+	min-height: 450px;
+	list-style: none;
+	position: relative;
+}
+
+.lots__overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 0;
+}
+
+.lot-card-link {
+	color: #fff;
+	line-height: 1.2;
+	text-decoration: none;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	position: inherit;
+	z-index: 1;
+}
+
+.card__title {
+	font-size: 22px;
+	font-weight: 700;
+	text-decoration-line: underline;
+	text-transform: uppercase;
+}
+
+.text__lot-card {
+	font-size: 20px;
+	font-weight: 400;
+}
+
+.card_type_film {
+	background-image: url(../images/card-lot-01.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	z-index: -1;
+}
+
+.card_type_book {
+	background-image: url(../images/card-lot-02.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	z-index: -1;
+}
+
+.card_type_picture {
+	background-image: url(../images/card-lot-03.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	z-index: -1;
+}
+
+.more-lots {
+	padding-left: 40px;
+}
+
+.about__column {
+	margin-top: 182px;
+	display: grid;
+	grid-template-columns: 430px 1fr;
+	grid-template-rows: auto auto;
+	column-gap: 25px;
+	align-items: center;
+}
+
+.about__logo {
+	width: 240px;
+	height: 240px;
+	padding: 62px 46px;
+	background-color: #000;
+	border-radius: 50%;
+	justify-self: center;
+}
+
+.about__logo-image {
+	width: 148px;
+	height: 114px;
+}
+
+.about__text {
+	grid-column: 2;
+	display: grid;
+	row-gap: 25px;
+	font-size: 20px;
+}
+
+.container__footer {
+  display: grid;
+}
+
+.footer__nav {
+  margin-top: 180px;
+  margin-bottom: 92px;
+  height: 93px;
+}
+
+.footer__menu {
+  justify-self: center;
+  align-self: self-start;
+  display: grid;
+}
+
+.footer__menu-list {
+  list-style-type: none;
+  justify-self: center;
+}
+
+.footer__social-list {
+  justify-self: end;
+  align-self: start;
+}
+
+.footer__social-list {
+  width: 240px;
+  height: 48px;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
