--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-@import url(global.css);
-
 body {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 400;
@@ -18,19 +16,14 @@ body {
 	margin-top: 92px;
 }
 
-.nav {
+.box {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: auto;
 	align-items: center;
 }
 
-.header__nav {
-	height: 109px;
-}
-
 .header__menu {
-	height: 23px;
 	width: 388px;
 	display: flex;
 	gap: 0 32px;
@@ -52,7 +45,6 @@ body {
 
 .address {
 	width: 240px;
-	height: 97px;
 	display: grid;
 	justify-content: center;
 }
@@ -64,23 +56,20 @@ body {
 .cover {
 	margin: 0 auto;
 	margin-top: 92px;
-	height: 757px;
+	/* height: 757px; */
 	max-width: 1440px;
 	background-image: url(../images/cover.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
-	z-index: -1;
+	z-index: 0;
 }
 
 .overlay {
 	width: 100%;
 	height: 100%;
 	background-color: rgb(0, 0, 0, 0.6);
-	z-index: 0;
-}
-
-.cover__overlay {
+	z-index: 1;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -91,7 +80,7 @@ body {
 	color: #fff;
 	height: 100%;
 	position: relative;
-	z-index: 1;
+	z-index: 2;
 }
 
 .title {
@@ -128,7 +117,7 @@ body {
 	letter-spacing: 30px;
 }
 
-.title_span-o {
+.title_span-last {
 	letter-spacing: 0;
 }
 
@@ -136,13 +125,14 @@ body {
 	display: flex;
 	justify-content: end;
 	align-items: center;
-	padding-top: 135px;
+	padding-top: 130px;
+	padding-bottom: 50px;
 }
 .cover__text {
 	padding-right: 78px;
 	word-spacing: 21px;
 	font-size: 22px;
-	word-spacing: 18px;
+	word-spacing: 19px;
 }
 
 .cover__bet-button {
@@ -151,6 +141,7 @@ body {
 	text-transform: uppercase;
 	border: 1px solid #fff;
 	padding: 12px 32px;
+	cursor: pointer;
 }
 
 .lots {
@@ -183,15 +174,9 @@ body {
 	padding: 50px 40px;
 	min-height: 450px;
 	list-style: none;
+	background-repeat: no-repeat;
+	background-size: cover;
 	position: relative;
-}
-
-.lots__overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
 	z-index: 0;
 }
 
@@ -204,7 +189,7 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	position: inherit;
-	z-index: 1;
+	z-index: 2;
 }
 
 .card__title {
@@ -221,26 +206,14 @@ body {
 
 .card_type_film {
 	background-image: url(../images/card-lot-01.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-	z-index: -1;
 }
 
 .card_type_book {
 	background-image: url(../images/card-lot-02.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-	z-index: -1;
 }
 
 .card_type_picture {
 	background-image: url(../images/card-lot-03.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-	z-index: -1;
 }
 
 .more-lots {
@@ -249,7 +222,7 @@ body {
 }
 
 .about__column {
-	margin-top: 182px;
+	margin-top: 175px;
 	display: grid;
 	grid-template-columns: 430px 1fr;
 	grid-template-rows: auto auto;
@@ -283,10 +256,9 @@ body {
 	display: grid;
 }
 
-.footer__nav {
-	margin-top: 180px;
+.footer__box {
+	margin-top: 187px;
 	margin-bottom: 92px;
-	height: 93px;
 }
 
 .footer__menu {
@@ -308,7 +280,6 @@ body {
 
 .footer__social-list {
 	width: 240px;
-	height: 48px;
 	display: flex;
 	justify-content: space-between;
 	list-style-type: none;
