--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 body {
-	font-family: 'Raleway', sans-serif;
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 1.35;
@@ -34,7 +33,7 @@ body {
 	list-style-type: circle;
 }
 
-.header_menu-list_active {
+.header__list_no-bullit {
 	list-style-type: none;
 }
 
@@ -56,7 +55,6 @@ body {
 .cover {
 	margin: 0 auto;
 	margin-top: 92px;
-	/* height: 757px; */
 	max-width: 1440px;
 	background-image: url(../images/cover.jpg);
 	background-repeat: no-repeat;
@@ -151,12 +149,13 @@ body {
 .heading {
 	font-size: 40px;
 	font-weight: 700;
+	line-height: 60px;
 	text-transform: uppercase;
 }
 
 .heading__lots {
 	padding-left: 40px;
-	padding-bottom: 27px;
+	padding-bottom: 20px;
 }
 
 .lots__card-list {
@@ -222,7 +221,7 @@ body {
 }
 
 .about__column {
-	margin-top: 175px;
+	margin-top: 180px;
 	display: grid;
 	grid-template-columns: 430px 1fr;
 	grid-template-rows: auto auto;
@@ -245,11 +244,12 @@ body {
 }
 
 .about__text {
+	margin-top: 8px;
 	grid-column: 2;
 	display: grid;
-	row-gap: 25px;
+	row-gap: 31px;
 	font-size: 20px;
-	line-height: 1.2;
+	line-height: 1.13;
 }
 
 .container__footer {
@@ -257,7 +257,7 @@ body {
 }
 
 .footer__box {
-	margin-top: 187px;
+	margin-top: 184px;
 	margin-bottom: 92px;
 }
 
@@ -279,8 +279,8 @@ body {
 }
 
 .footer__social-list {
-	width: 240px;
 	display: flex;
+	gap: 50px;
 	justify-content: space-between;
 	list-style-type: none;
 }
