--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .header {
-	margin-top: 92px;
+	margin-top: 95px;
 }
 
 .box {
@@ -37,6 +37,10 @@ body {
 	list-style-type: none;
 }
 
+.link_no-underline {
+	text-decoration: none;
+}
+
 .header__logo {
 	width: 136px;
 	justify-self: center;
@@ -54,11 +58,12 @@ body {
 
 .cover {
 	margin: 0 auto;
-	margin-top: 92px;
+	margin-top: 90px;
 	max-width: 1440px;
 	background-image: url(../images/cover.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center;
 	position: relative;
 	z-index: 0;
 }
@@ -123,14 +128,14 @@ body {
 	display: flex;
 	justify-content: end;
 	align-items: center;
-	padding-top: 130px;
+	padding-top: 135px;
 	padding-bottom: 50px;
 }
 .cover__text {
 	padding-right: 78px;
 	word-spacing: 21px;
 	font-size: 22px;
-	word-spacing: 19px;
+	word-spacing: 18px;
 }
 
 .cover__bet-button {
@@ -143,7 +148,7 @@ body {
 }
 
 .lots {
-	margin-top: 175px;
+	margin-top: 173px;
 }
 
 .heading {
@@ -283,6 +288,10 @@ body {
 	gap: 50px;
 	justify-content: space-between;
 	list-style-type: none;
+}
+
+.footer__menu-link {
+	text-underline-offset: 1px;
 }
 
 .footer__social-icon {
